--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "pack/alexmckay/start/vim-react-snippets"]
 	path = pack/alexmckay/start/vim-react-snippets
 	url = git@github.com:mlaursen/vim-react-snippets.git
+[submodule "pack/alexmckay/start/auto-pairs"]
+	path = pack/alexmckay/start/auto-pairs
+	url = git@github.com:jiangmiao/auto-pairs.git
